set z-index on the doc-subheader component in order to avoid links overflow

--- a/style/components/doc-subheader/doc-subheader.scss
+++ b/style/components/doc-subheader/doc-subheader.scss
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   padding: 0 1em;
+  z-index: 1000;
 
   @include media-query('sm') {
     left: $docsidebar--width;
